--- a/index.html
+++ b/index.html
@@ -24,9 +24,45 @@
       </p>
     </header>
     <main class="col-12 col-lg-9">
-      <div class="m-5">
-        <h2>To Do</h2>
-        <ul id="list-toDo" class="list-group"> </ul>
+      <div class="m-5 row justify-content-around">
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <h2>To Do</h2>
+          <ul id="list-toDo" class="list-group"> </ul>
+        </div>
+          <!--to do ends-->
+          <!--in progress starts-->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <h2>In Progress</h2>
+          <ul id="list-inProgress" class ="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill">11/11/1111</span>
+              <p class="m-1">Sample task in progress</p>
+            </li>
+          </ul>
+        </div>
+        <!--In progress end-->
+        <!--in review start-->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <h2>In Review</h2>
+          <ul id="list-inReview" class="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill">11/11/1111</span>
+              <p class="m-1">Sample task in review</p>
+            </li>
+          </ul>
+        </div>
+        <!--in review end-->
+        <!--done start-->
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
+          <h2>Done</h2>
+          <ul id="list-done" class="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill">11/11/1111</span>
+              <p class="m-1">Sample task done</p>
+            </li>
+          </ul>
+        </div>
+        <!--done end-->
       </div>
     </main>
   </div>
